<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".signupform.WorkerVerifyFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="Complete Your Professional Profile"
            android:textColor="@color/yellow"
            android:textSize="24dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/signup_nic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/signup_verify_nic"
            android:backgroundTint="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TableLayout
            android:layout_width="297dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/signup_verify_nicfront"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/signup_verify_nic_front"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/signup_verify_nicfront_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_cloud_upload_24"
                    android:background="@color/dark_grey"/>

                <ImageView
                    android:id="@+id/signup_clear_nicfront_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/baseline_cancel_24"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/signup_verify_nicback"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/signup_verify_nic_back" />

                <ImageButton
                    android:id="@+id/signup_verify_nicback_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_cloud_upload_24"
                    android:background="@color/dark_grey"/>

                <ImageView
                    android:id="@+id/signup_clear_nicback_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/baseline_cancel_24"/>

            </TableRow>


        </TableLayout>


        <TextView
            android:id="@+id/signup_br"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/signup_verify_br" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_verify_br"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/signup_verify_br_desc"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="297dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <ImageButton
                        android:id="@+id/signup_verify_br_upload"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:src="@drawable/baseline_cloud_upload_24"
                        android:background="@color/dark_grey"/>

                    <ImageView
                        android:id="@+id/signup_clear_br_upload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@drawable/baseline_cancel_24"/>
                </TableRow>

            </TableLayout>


        </LinearLayout>

            <TextView
                android:id="@+id/signup_select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Choose your skill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Container where list views will be dynamically added -->
            <LinearLayout
                android:id="@+id/layout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <!-- Button to add new list view -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="Note !"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="Please select one main skill and up to three related sub-skills that best match your expertise."
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/signup_show_category"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text=""
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/signup_add_newcategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="Add Your Category"
                android:background="@drawable/button_yellow_outline"
                android:clickable="true"
                android:focusable="true"
                android:onClick="showSkillDialog"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>


        </LinearLayout>

</RelativeLayout>